# syngen

./: --batch_size INT  --print_report BOOL  --table_name TABLE_NAME  .dockerignore  .flake8  .gitattributes  .gitignore  CHAGELOG.txt  CLAUDE.md  DESCRIPTION  Dockerfile  Dockerfile.ml  Dockerfile.ml-inference  Dockerfile.python3.12  MANIFEST.in  README.md  SECURITY.md  infer --metadata_path PATH_TO_METADATA  infer --metadata_path STR --log_level STR  infer --table_name Housing  infer --table_name TABLE_NAME  ml-inference.dockerfile  ml-training.dockerfile  pyproject.toml  requirements-databricks-15.4-LTS.txt  requirements-streamlit.txt  requirements.txt  setup.cfg  train --metadata_path PATH_TO_METADATA_YAML
.claude/: settings.json
.claude/agents/: syngen-code-reviewer.md  syngen-codebase-researcher.md  syngen-implementation-engineer.md  syngen-security-reviewer.md  syngen-test-engineer.md
.claude/rules/: metadata-yaml.md  project-architecture.md  python-quality.md  security-and-secrets.md
.claude/skills/syngen-bootstrap/: SKILL.md
.claude/skills/syngen-harness-update/: SKILL.md
.claude/skills/syngen-implement-feature/: SKILL.md
.claude/skills/syngen-test-selection/: SKILL.md
.claude/skills/syngen-validation-debugging/: SKILL.md
.github/workflows/: action-build-deploy.yml  action-docker.yml  action-pypi-upload  action-pypi-upload.yml  action-python-tests.yml  databricks-build.yml  databricks-test.yml  development-action.yml  github-actions-demo.yml  migration-parity.yml  windows-test.yml  windows-wheel-smoke.yml
5946/: 5946_script.py  config.json
benchmarks/: __init__.py  text_sequence_training.py
databricks/: README  databricks.dockerfile  pyproject.toml  requirements-databricks-15.4-LTS.txt  setup.cfg
demo-notebooks/: Early-stopping.ipynb  Linked-tables.ipynb  SDK_demonstration.ipynb
docs/agent-harness/: glossary.md  harness-changelog.md
docs/migration/: pytorch_backend_design.md  sign_off_records.md  tf_to_pytorch_guide.md  tf_to_pytorch_migration_plan.md
example-data/: housing.yml  housing_fk.csv  housing_pk.csv  housing_properties.csv
example-metadata/: housing_metadata.yaml
examples/: tdm_models.csv
examples/example-data/: customers.csv  customers_rich.avro  customers_rich.csv  customers_rich_schema_only.avro  customers_simp.csv  customers_small.csv  escaped_quoted_table.csv  housing_conditions.csv  housing_properties.csv  mixed_datatypes.csv  mixed_datatypes_large.csv  patients.csv  patients_preprocessed.csv  sample_test.avro
examples/example-metadata/: customers_metadata.yaml  customers_small_metadata.yaml  housing_metadata-Copy1.yaml  housing_metadata.yaml  housing_metadata1.yaml  housing_metadata_format.yaml
examples/example-package/: custom_loader.py
examples/user_guide/: housing.yaml
pytorch_migration/: FINDINGS.md
pytorch_migration/analysis/results/: step1_seed_variance.json  step2_bgm_inspect.json  step3_encode_decode.json  step3b_tf_reconstruction.json  step4_solutions.json
pytorch_migration/analysis/scripts/: dist_compare.py  measure.py  step1_seed_variance.py  step2_bgm_inspect.py  step3_encode_decode.py  step3b_tf_reconstruction.py
src/: config.toml  infer.py  setup.py  start.py  train.py
src/.github/: PULL_REQUEST_TEMPLATE.md
src/ml/config/: __init__.py
src/ml/data_loaders/: __init__.py  data_loaders.py
src/ml/metrics/: __init__.py
src/ml/metrics/accuracy_test/: accuracy_test.py
src/ml/pipeline/: pipeline.py
src/ml/reporters/: reporters.py
src/ml/strategies/: __init__.py  strategies.py
src/ml/train_chain/: train_chain.py
src/ml/vae/: __init__.py
src/ml/vae/models/: __init__.py  dataset.py  features.py  model.py
src/ml/vae/wrappers/: wrappers.py
src/syngen/: VERSION  __init__.py  infer.py  launch_chain_process.py  metadata.yaml  sdk.py  start.py  streamlit_app.py  train.py
src/syngen/.streamlit/: config.toml
src/syngen/context/: __init__.py  context.py
src/syngen/entrypoints/: __init__.py
src/syngen/ml/config/: __init__.py  configurations.py  validation.py
src/syngen/ml/context/: __init__.py  context.py
src/syngen/ml/convertor/: __init__.py  convertor.py
src/syngen/ml/custom_logger/: __init__.py  custom_logger.py
src/syngen/ml/data_loaders/: __init__.py  data_loaders.py  dataframe_fetcher.py
src/syngen/ml/flatten_json/: __init__.py  flatten_json.py
src/syngen/ml/format_settings/: __init__.py  format_settings.py
src/syngen/ml/handlers/: __init__.py  handlers.py
src/syngen/ml/interface/: __init__.py  interface.py
src/syngen/ml/metrics/: __init__.py  utils.py
src/syngen/ml/mlflow/: mlflow_tracker.py
src/syngen/ml/mlflow_tracker/: __init__.py  mlflow_tracker.py
src/syngen/ml/pipeline/: __init__.py  pipeline.py
src/syngen/ml/preprocess/: __init__.py  preprocess.py
src/syngen/ml/processors/: __init__.py  processors.py
src/syngen/ml/reporters/: __init__.py  reporters.py
src/syngen/ml/schema_convertor/: __init__.py  schema_convertor.py
src/syngen/ml/strategies/: __init__.py  strategies.py
src/syngen/ml/train_chain/: __init__.py  train_chain.py
src/syngen/ml/utils/: __init__.py  pipeline.py  profiling.py  utils.py
src/syngen/ml/vae/: __init__.py  torch_cvae.py
src/syngen/ml/validation_schema/: __init__.py  validation_schema.py
src/syngen/ml/worker/: __init__.py  worker.py
src/syngen/ml/yaml_handler/: __init__.py  yaml_handler.py
src/syngen/streamlit_app/: __init__.py  run.py  start.py
src/syngen/streamlit_app/.streamlit/: config.toml
src/syngen/streamlit_app/css/: font_style.css  style.css
src/syngen/uploaded_files/: fk_test.csv
src/tests/: conftest.py  pytest.ini  test_data_loaders.py  test_features.py  test_utils.py
src/tests/metamorphic/: README.md  conftest.py  test_boundary.py  test_contract.py  test_cross_format.py  test_distribution.py  test_diversity.py  test_equivariance.py  test_invariance.py  test_io_roundtrip.py  test_keys_relations.py  test_privacy.py  test_relationships.py  test_robustness.py  test_scaling.py  test_training.py  test_transformations.py  test_utility.py
src/tests/unit/: ml_compat.py
(+258 files in other folders)
