[metadata]
name = syngen
version = file: src/syngen/VERSION
description = file: DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdspora/syngen
author = EPAM Systems, Inc.
maintainer = Pavel Bobyrev
license = GPLv3 License
keywords = data, generation, synthetic, vae, tabular
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
package_dir =
     = src
packages = find:
include_package_data = True
python_requires = >3.7
install_requires =
    category_encoders==2.5.*
    click
    ipython==8.4.*
    keras<2.14,>=2.13.1
    lazy==1.4
    loguru
    matplotlib==3.5.*
    numpy==1.22.*
    pandas==1.3.*
    pandavro==1.7.*
    pathos==0.2.*
    scikit_learn==1.1.*
    scipy==1.7.*
    seaborn==0.11.*
    tensorflow==2.13.*
    tqdm==4.64.*
    PyYAML==6.*
    MarkupSafe==2.0.1
    Jinja2
    avro
    python-slugify[unidecode]>=7.0.0
    pytest
    pytest-reportportal
    reportportal-client
    base32-crockford
    py-ulid
    marshmallow==3.19.*
    xlrd
    xlwt
    openpyxl

[options.packages.find]
where = src
[options.package_data]
* = *.py, *.html, *.ttf, *.svg, *.css, *.js

[options.entry_points]
console_scripts =
    train = syngen.train:launch_train
    infer = syngen.infer:launch_infer
