[metadata]
name = syngen
version = file: src/syngen/VERSION
description = file: DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdspora/syngen
author = EPAM Systems, Inc.
maintainer = Pavel Bobyrev
license = GPLv3 License
keywords = data, generation, synthetic, vae, tabular
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
package_dir =
     = src
packages = find:
include_package_data = True
python_requires = >3.8, <3.11
install_requires =
    aiohttp>=3.9.0
    attrs
    avro
    base32-crockford
    boto3
    category_encoders==2.5.*
    click
    Jinja2
    keras==2.15.*
    lazy==1.4
    loguru
    MarkupSafe==2.1.1
    marshmallow==3.19.*
    matplotlib==3.5.*
    mlflow==2.11.3
    numpy==1.23.*
    openpyxl
    pandas==1.3.*
    pandavro==1.7.2
    pathos==0.2.*
    pillow==10.2.*
    py-ulid
    pytest
    pytest-reportportal
    python-slugify[unidecode]>=7.0.0
    PyYAML==6.*
    reportportal-client
    scikit_learn==1.1.*
    scipy==1.11.*
    seaborn==0.11.*
    setuptools>=65.5.1
    tensorflow==2.15.*
    tqdm==4.64.*
    Werkzeug==3.0.1
    xlrd
    xlwt

[options.extras_require]
ui =
    streamlit
    streamlit_option_menu
    altair>5


[options.packages.find]
where = src
[options.package_data]
* = *.py, *.html, *.ttf, *.svg, *.css, *.js

[options.entry_points]
console_scripts =
    train = syngen.train:launch_train
    infer = syngen.infer:launch_infer
    syngen = syngen:main
