[metadata]
name = syngen
version = file: src/syngen/VERSION
description = file: DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdspora/syngen
author = EPAM Systems, Inc.
maintainer = Hanna Imshenetska
license = GPLv3 License
keywords = data, generation, synthetic, vae, tabular
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >3.9, <3.12
install_requires =
    aiohttp>=3.10.11
    attrs
    avro
    base32-crockford
    boto3
    category_encoders==2.6.3
    click
    cryptography
    Jinja2
    flatten_json
    keras==2.15.*
    lazy==1.4
    loguru
    MarkupSafe==2.1.1
    marshmallow==3.19.*
    matplotlib==3.9.*
    mlflow==2.22.*
    numpy==1.26.*
    openpyxl
    pandas==2.2.*
    pandavro==1.8.*
    pathos==0.2.*
    pillow==10.3.*
    psutil
    py-ulid
    pytest
    pytest-reportportal
    python-slugify[unidecode]>=7.0.0
    PyYAML==6.*
    reportportal-client
    scikit_learn==1.5.*
    scipy==1.14.*
    seaborn==0.13.*
    setuptools==74.1.*
    tensorflow==2.15.*
    tornado==6.4.*
    tqdm==4.66.3
    Werkzeug==3.1.2
    xlrd
    xlwt

[options.extras_require]
ui =
    streamlit==1.31.*
    streamlit_option_menu


[options.packages.find]
where = src
[options.package_data]
* = *.py, *.html, *.ttf, *.svg, *.css, *.js

[options.entry_points]
console_scripts =
    train = syngen.train:launch_train
    infer = syngen.infer:launch_infer
    syngen = syngen:main
