[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Databricks-compatible variant of syngen, pinned to match Databricks Runtime
# 15.4 LTS (downgraded numpy/scipy/matplotlib/pillow/seaborn, mlflow-skinny
# instead of mlflow, no tornado). Published to PyPI as a separate package
# `syngen-databricks`. The databricks-build workflow copies this file to the
# repo root before building, so all relative paths (src/, src/syngen/VERSION,
# README.md) resolve there.

[project]
name = "syngen-databricks"
dynamic = ["version"]
description = "Synthetic data generation tool that uncovers patterns, trends, and correlations hidden within production datasets and replicates them in less protected environments, using ML models to deliver accurate, referentially intact datasets."
readme = "README.md"
requires-python = ">3.10,<3.12"
license = { text = "GPLv3 License" }
authors = [{ name = "EPAM Systems, Inc." }]
maintainers = [{ name = "Hanna Imshenetska" }]
keywords = ["data", "generation", "synthetic", "vae", "tabular"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.9.0",
    "attrs",
    "avro",
    "base32-crockford",
    "boto3",
    "click",
    "cryptography",
    "exrex",
    "Jinja2",
    "flatten_json",
    "keras==2.15.*",
    "lazy==1.4",
    "loguru",
    "MarkupSafe==2.1.1",
    "marshmallow==3.19.*",
    "matplotlib==3.7.*",
    "mlflow-skinny==2.11.*",
    "numpy==1.26.*",
    "openpyxl",
    "pandas==2.2.*",
    "pandavro==1.8.*",
    "pathos==0.2.*",
    "pillow==9.4.*",
    "psutil",
    "py-ulid",
    "python-slugify[unidecode]>=7.0.0",
    "PyYAML==6.*",
    "scikit_learn==1.5.*",
    "scipy==1.11.*",
    "sdmetrics==0.28.*",
    "seaborn==0.12.*",
    "tensorflow==2.15.*",
    "tqdm==4.66.3",
    "Werkzeug==3.0.3",
    "xlrd",
    "xlwt",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-reportportal",
    "reportportal-client",
]

[project.scripts]
train = "syngen.train:cli_launch_train"
infer = "syngen.infer:cli_launch_infer"
syngen = "syngen:main"

[project.urls]
Homepage = "https://github.com/tdspora/syngen"

[tool.setuptools.dynamic]
version = { file = "src/syngen/VERSION" }

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["syngen*"]

[tool.setuptools.package-data]
syngen = [
    "VERSION",
    "**/*.html",
    "**/*.css",
    "**/*.js",
    "**/*.svg",
    "**/*.ttf",
    "**/.gitkeep",
]
